# MinSG

./: CMakeLists.txt  Layout.graphml  MinSG.h  MinSGConfig.cmake.in  header.txt
Ext/: CMakeLists.txt
Ext/AdaptiveGlobalVisibilitySampling/: AdaptiveGlobalVisibilitySampling.cpp  AdaptiveGlobalVisibilitySampling.h  CMakeLists.txt  Definitions.h  MutationCandidate.h  MutationCandidates.cpp  MutationCandidates.h  Sample.h  SampleDistributions.cpp  SampleDistributions.h  ViewCells.cpp  ViewCells.h
Ext/Behaviours/: AbstractBehaviourDecorator.cpp  AbstractBehaviourDecorator.h  BehaviourGroup.cpp  BehaviourGroup.h  CMakeLists.txt  KeyFrameAnimationBehaviour.cpp  KeyFrameAnimationBehaviour.h  SRTBehaviour.cpp  SRTBehaviour.h  SimplePhysics.cpp  SimplePhysics.h  SoundEmittingBehaviour.cpp  SoundEmittingBehaviour.h  SoundReceivingBehaviour.cpp  SoundReceivingBehaviour.h  TimedBehaviourDecorator.cpp  TimedBehaviourDecorator.h  header.txt
Ext/BlueSurfels/: CMakeLists.txt  StreamedSurfelGenerator.cpp  StreamedSurfelGenerator.h  SurfelAnalysis.cpp  SurfelAnalysis.h  SurfelGenerator.cpp  SurfelGenerator.h  SurfelRenderer.cpp  SurfelRenderer.h  SurfelRenderer2.cpp  SurfelRenderer2.h  SurfelRenderer_Budget.cpp  SurfelRenderer_Budget.h  SurfelRenderer_FixedSize.cpp  SurfelRenderer_FixedSize.h
Ext/ColorCubes/: CMakeLists.txt  ColorCube.cpp  ColorCube.h  ColorCubeGenerator.cpp  ColorCubeGenerator.h  ColorCubeRenderer.cpp  ColorCubeRenderer.h  header.txt
Ext/D3Fact/: CMakeLists.txt  ClientUnit.cpp  ClientUnit.h  ConsoleStream.cpp  ConsoleStream.h  IOStreamHandler.cpp  IOStreamHandler.h  Message.cpp  Message.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageHandler.cpp  MessageHandler.h  ObjectRegistry.h  Session.cpp  Session.h  Shape.cpp  Shape.h  StreamFSProvider.cpp  StreamFSProvider.h  SyncHandler.cpp  SyncHandler.h  TCPHandler.cpp  TCPHandler.h  Tools.cpp  Tools.h  UDPHandler.cpp  UDPHandler.h  header.txt
Ext/Evaluator/: AdaptCullEvaluator.cpp  AdaptCullEvaluator.h  AreaEvaluator.cpp  AreaEvaluator.h  BoxQualityEvaluator.cpp  BoxQualityEvaluator.h  CMakeLists.txt  ColorVisibilityEvaluator.cpp  ColorVisibilityEvaluator.h  Evaluator.cpp  Evaluator.h  OccOverheadEvaluator.cpp  OccOverheadEvaluator.h  OverdrawFactorEvaluator.cpp  OverdrawFactorEvaluator.h  StatsEvaluator.cpp  StatsEvaluator.h  TrianglesEvaluator.cpp  TrianglesEvaluator.h  VisibilityEvaluator.cpp  VisibilityEvaluator.h
Ext/ImageCompare/: AbstractImageComparator.cpp  AbstractImageComparator.h  AbstractOnGpuComparator.cpp  AbstractOnGpuComparator.h  AverageComparator.cpp  AverageComparator.h  CMakeLists.txt  PyramidComparator.cpp  PyramidComparator.h  SSIMComparator.cpp  SSIMComparator.h  SimilarPixelCounter.cpp  SimilarPixelCounter.h
Ext/ImpostorFactory/: CMakeLists.txt  ImpostorFactory.cpp  ImpostorFactory.h
Ext/KeyFrameAnimation/: CMakeLists.txt  KeyFrameAnimationData.cpp  KeyFrameAnimationData.h  KeyFrameAnimationNode.cpp  KeyFrameAnimationNode.h  header.txt
Ext/LoaderCOLLADA/: CMakeLists.txt  LoaderCOLLADA.cpp  LoaderCOLLADA.h  Writer.cpp  Writer.h  header.txt
Ext/LoaderGLTF/: CMakeLists.txt  LoaderGLTF.cpp  LoaderGLTF.h
Ext/MixedExtVisibility/: CMakeLists.txt  Preprocessor.cpp  Preprocessor.h
Ext/MultiAlgoRendering/: AlgoSelector.cpp  AlgoSelector.h  CMakeLists.txt  Dependencies.h  LP.cpp  LP.h  MultiAlgoGroupNode.cpp  MultiAlgoGroupNode.h  Region.cpp  Region.h  RegionEvaluator.cpp  RegionEvaluator.h  SampleContext.cpp  SampleContext.h  SampleRegion.cpp  SampleRegion.h  SampleStorage.cpp  SampleStorage.h  SurfelRenderer.cpp  SurfelRenderer.h  Utils.h  header.txt
Ext/Nodes/: BillboardNode.cpp  BillboardNode.h  CMakeLists.txt  FakeInstanceNode.cpp  FakeInstanceNode.h  GenericMetaNode.cpp  GenericMetaNode.h
Ext/OcclusionCulling/: CHCRenderer.cpp  CHCRenderer.h  CHCppRenderer.cpp  CHCppRenderer.h  CMakeLists.txt  HOMRenderer.cpp  HOMRenderer.h  NaiveOccRenderer.cpp  NaiveOccRenderer.h  OccRenderer.cpp  OccRenderer.h  OccludeeRenderer.cpp  OccludeeRenderer.h  OcclusionCullingStatistics.cpp  OcclusionCullingStatistics.h
Ext/OutOfCore/: CMakeLists.txt  CacheContext.cpp  CacheContext.h  CacheLevel.cpp  CacheLevel.h  CacheLevelFileSystem.cpp  CacheLevelFileSystem.h  CacheLevelFiles.cpp  CacheLevelFiles.h  CacheLevelGraphicsMemory.cpp  CacheLevelGraphicsMemory.h  CacheLevelMainMemory.cpp  CacheLevelMainMemory.h  CacheManager.cpp  CacheManager.h  CacheObject.cpp  CacheObject.h  CacheObjectPriority.h  DataStrategy.cpp  DataStrategy.h  Definitions.h  ImportHandler.cpp  ImportHandler.h  MeshAttributeSerialization.cpp  MeshAttributeSerialization.h  OutOfCore.cpp  OutOfCore.h
Ext/ParticleSystem/: CMakeLists.txt  Particle.h  ParticleAffectors.cpp  ParticleAffectors.h  ParticleEmitters.cpp  ParticleEmitters.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleSystemNode.cpp  ParticleSystemNode.h  header.txt
Ext/PathTracing/: CMakeLists.txt  ExtTriangle.cpp  ExtTriangle.h  Light.cpp  Light.h  Material.cpp  Material.h  PathTracer.cpp  PathTracer.h  RayCaster.cpp  RayCaster.h  SurfacePoint.cpp  SurfacePoint.h  TreeBuilder.cpp  TreeBuilder.h
Ext/Physics/: CMakeLists.txt  CollisionShape.h  PhysicObject.cpp  PhysicObject.h  PhysicWorld.cpp  PhysicWorld.h  header.txt
Ext/PipelineStatistics/: CMakeLists.txt  Collector.cpp  Collector.h  Statistics.cpp  Statistics.h
SceneManagement/: CMakeLists.txt  ExportFunctions.cpp  ExportFunctions.h  ImportFunctions.cpp  ImportFunctions.h  MeshImportHandler.cpp  MeshImportHandler.h  ReaderDAE.cpp  ReaderMinSG.cpp  ReaderMinSG.h  SceneDescription.cpp  SceneDescription.h  SceneManager.cpp  SceneManager.h  ShaderFactory.cpp  ShaderFactory.h  WriterDAE.cpp  WriterMinSG.cpp  WriterMinSG.h
examples/: CMakeLists.txt
tests/: CMakeLists.txt  MinSGTestMain.cpp  test_OutOfCore.cpp  test_automatic.cpp  test_cost_evaluator.cpp  test_large_scene.cpp  test_load_scene.cpp  test_node_memory.cpp  test_simple1.cpp  test_spherical_sampling.cpp  test_spherical_sampling_serialization.cpp  test_statistics.R  test_statistics.cpp  test_valuated_region_node.cpp  test_visibility_vector.cpp
(+489 files in other folders)
